--- a/package.json
+++ b/package.json
@@ -6,33 +6,15 @@
   "license": "MIT",
   "homepage": "https://github.com/cvgellhorn/webpack-boilerplate",
   "scripts": {
-    "dev": "cross-env NODE_ENV=dev webpack-dev-server --progress --mode development --config webpack.config.dev.js",
-    "build": "webpack -p --progress --mode production --config webpack.config.build.js"
+    "dev": "npx lite-server --baseDir='src'",
+    "build": "rm -r dist && mkdir dist && cp -r src/ dist/ && cp dist/index.html dist/login.html && cd dist && zip -r login.zip *"
   },
   "repository": {
     "type": "git",
     "url": "https://cvgellhorn@github.com/cvgellhorn/webpack-boilerplate.git"
   },
   "dependencies": {
-    "lodash": "4.17.10",
     "typeface-roboto": "^0.0.54"
   },
-  "devDependencies": {
-    "babel-core": "6.26.3",
-    "babel-loader": "7.1.5",
-    "babel-preset-env": "1.7.0",
-    "clean-webpack-plugin": "0.1.19",
-    "cross-env": "5.2.0",
-    "css-loader": "1.0.0",
-    "file-loader": "1.1.11",
-    "html-webpack-plugin": "3.2.0",
-    "node-sass": "4.9.2",
-    "sass-loader": "7.0.3",
-    "style-loader": "0.21.0",
-    "url-loader": "1.0.1",
-    "webpack": "4.16.3",
-    "webpack-cli": "3.1.0",
-    "webpack-dev-server": "3.1.5",
-    "webpack-merge": "4.1.3"
-  }
+  "devDependencies": {}
 }
